--- a/styles.css
+++ b/styles.css
@@ -240,3 +240,27 @@ main {
 .footer-link:hover {
   text-decoration: underline;
 }
+
+.contact-section {
+  padding: 20px;
+  background-color: #F8ECD1 ;
+  text-align: center;
+}
+
+.contact-info {
+  margin-bottom: 20px;
+}
+
+.contact-info h2 {
+  margin-bottom: 10px;
+}
+
+.contact-info p {
+  margin: 5px 0;
+  font-size: 1.2em;
+}
+
+.contact-map {
+  width: 100%;
+  height: 400px;
+}
